# Vapoursynth-BM3DMETAL

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
lib/: CMakeLists.txt  bm3dmetal.mm  shader.metal
